# fractal_generator

./: CMakeLists.txt  README.md  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/glfw-3.3.8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw/glfw-3.3.8/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
lib/glfw/glfw-3.3.8/src/Debug/: glfw3.lib
lib/glfw/glfw-3.3.8/src/Release/: glfw3.lib
lib/glfw/glfw-3.3.8/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
lib/glfw/glfw-3.3.8/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
shaders/: rectangle.fs
src/: compute_shader.cpp  compute_shader.h  gl_deps.h  main.cpp  read_file.cpp  read_file.h  shader.cpp  shader.h  texture.cpp  texture.h
